--- a/css/estilos.css
+++ b/css/estilos.css
@@ -72,6 +72,32 @@ nav ul li a:hover {
     text-decoration: none;
 }
 
+.dropdown-content {
+    display: none;
+    position: absolute !important;
+    background: #ffffff !important;
+    box-shadow: 2px 10px 8px rgba(0, 0, 0, 0.5) !important;
+    width: 127.5px !important;
+    z-index: 1 !important;
+}
+
+.dropdown-content-english {
+    display: none;
+    position: absolute !important;
+    background: #ffffff !important;
+    box-shadow: 2px 10px 8px rgba(0, 0, 0, 0.5) !important;
+    width: 154px !important;
+    z-index: 1 !important;
+}
+
+#dropdown:hover .dropdown-content-english {
+    display: block;
+}
+
+#dropdown:hover .dropdown-content {
+    display: block;
+}
+
 .padding-img {
     padding: 0 15px 0 15px;
 }
@@ -313,20 +339,20 @@ label {
 /* Fin Footer */
 
 #carrusel1 {
-    background-image: url('images/slider/swiper/Paginasweb.jpg');
+    background-image: url('../images/slider/swiper/Paginasweb.jpg');
 }
 
 #carrusel2 {
-    background-image: url('images/slider/swiper/Marketing.jpg');
+    background-image: url('../images/slider/swiper/Marketing.jpg');
 }
 
 #carrusel3 {
-    background-image: url('images/slider/swiper/Disenografico.jpg');
+    background-image: url('../images/slider/swiper/Disenografico.jpg');
     background-position: center top;
 }
 
 #carrusel4 {
-    background-image: url('images/slider/swiper/apps.jpg');
+    background-image: url('../images/slider/swiper/apps.jpg');
     background-position: center top;
 }
 
@@ -335,6 +361,24 @@ label {
     .menuToggle {
         display: none;
         transition: all;
+    }
+    
+    .dropdown-content {
+        display: none;
+        position: absolute !important;
+        background: #ffffff !important;
+        box-shadow: 2px 10px 8px rgba(0, 0, 0, 0.5) !important;
+        width: 100% !important;
+        z-index: 1 !important;
+    }
+
+    .dropdown-content-english {
+        display: none;
+        position: absolute !important;
+        background: #ffffff !important;
+        box-shadow: 2px 10px 8px rgba(0, 0, 0, 0.5) !important;
+        width: 100% !important;
+        z-index: 1 !important;
     }
 
     .menuLinks {
@@ -525,6 +569,24 @@ label {
         transition: all;
     }
 
+    .dropdown-content {
+        display: none;
+        position: absolute !important;
+        background: #ffffff !important;
+        box-shadow: 2px 10px 8px rgba(0, 0, 0, 0.5) !important;
+        width: 100% !important;
+        z-index: 1 !important;
+    }
+
+    .dropdown-content-english {
+        display: none;
+        position: absolute !important;
+        background: #ffffff !important;
+        box-shadow: 2px 10px 8px rgba(0, 0, 0, 0.5) !important;
+        width: 100% !important;
+        z-index: 1 !important;
+    }
+
     .menuLinks {
         display: block;
     }
@@ -681,6 +743,24 @@ label {
     .menuToggle {
         display: none;
         transition: all;
+    }
+
+    .dropdown-content {
+        display: none;
+        position: absolute !important;
+        background: #ffffff !important;
+        box-shadow: 2px 10px 8px rgba(0, 0, 0, 0.5) !important;
+        width: 100% !important;
+        z-index: 1 !important;
+    }
+
+    .dropdown-content-english {
+        display: none;
+        position: absolute !important;
+        background: #ffffff !important;
+        box-shadow: 2px 10px 8px rgba(0, 0, 0, 0.5) !important;
+        width: 100% !important;
+        z-index: 1 !important;
     }
 
     .menuLinks {
