--- a/css/colors.css
+++ b/css/colors.css
@@ -141,7 +141,7 @@ input.switch-toggle-round:checked + label:before,
 .owl-carousel .owl-nav [class*=owl-]:hover,
 .page-item.active .page-link,
 .page-link:hover,
-.page-link:focus { background-color: #1ABC9C !important; }
+.page-link:focus { background-color: #24b35a !important; }
 
 #primary-menu.style-4 > ul > li:hover > a,
 #primary-menu.style-4 > ul > li.current > a,
