--- a/css/seo.css
+++ b/css/seo.css
@@ -1,4 +1,4 @@
-.testimonials-carousel .owl-stage { padding-top: 40px !important }
+/*.testimonials-carousel .owl-stage { padding-top: 40px !important }
 
 .testimonials-carousel .owl-item {
 	opacity: .6 !important;
@@ -34,4 +34,4 @@
 .testi-meta {
 	text-align: center !important;
 	margin-top: 20px !important;
-}
+}*/
