--- a/css/style.css
+++ b/css/style.css
@@ -7395,7 +7395,7 @@ body:not(.device-touch) .button.button-full strong {
 .feature-box .fbox-icon i,
 .feature-box .fbox-icon img {
 	border-radius: 50%;
-	background-color: #24A35B;
+	background-color: #014e6c !important;
 }
 
 .feature-box .fbox-icon i {
@@ -7416,6 +7416,7 @@ body:not(.device-touch) .button.button-full strong {
 .feature-box p {
 	margin: 8px 0 0 0;
 	color: #999;
+	font-size: 16px;
 }
 
 .feature-box .before-heading { font-size: 14px; }
