--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ dl, dt, dd, ol, ul, li {
 body {
 	line-height: 1.5;
 	color: #555;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Poppins', sans-serif;
 }
 
 a {
@@ -104,7 +104,7 @@ h6 {
 	font-weight: 600;
 	line-height: 1.5;
 	margin: 0 0 30px 0;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Poppins', sans-serif;
 }
 
 h5,
@@ -146,7 +146,7 @@ table,
 fieldset,
 form { margin-bottom: 30px; }
 
-small { font-family: 'Open Sans', sans-serif; }
+small { font-family: 'Poppins', sans-serif; }
 
 
 /* ----------------------------------------------------------------
@@ -350,11 +350,11 @@ span.middot {
 
 .nolineheight { line-height: 0 !important; }
 
-.font-body { font-family: 'Open Sans', sans-serif; }
+.font-body { font-family: 'Poppins', sans-serif; }
 
-.font-primary { font-family: 'Open Sans', sans-serif; }
+.font-primary { font-family: 'Poppins', sans-serif; }
 
-.font-secondary { font-family: 'Open Sans', serif; }
+.font-secondary { font-family: 'Poppins', serif; }
 
 .bgicon {
 	display: block;
@@ -942,7 +942,7 @@ body.stretched #header.full-header .container {
 #logo {
 	position: relative;
 	float: left;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Poppins', sans-serif;
 	font-size: 36px;
 	line-height: 100%;
 	margin-right: 40px;
@@ -1067,11 +1067,10 @@ body.stretched #header.full-header .container {
 	line-height: 22px;
 	padding: 39px 15px;
 	color: #fff;
-	font-weight: bold;
-	font-size: 15px;
+	font-size: 18px;
 	letter-spacing: 1px;
 	text-transform: uppercase;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Poppins', sans-serif;
 	-webkit-transition: margin .4s ease, padding .4s ease;
 	-o-transition: margin .4s ease, padding .4s ease;
 	transition: margin .4s ease, padding .4s ease;
@@ -1155,14 +1154,14 @@ body.no-superfish #primary-menu li:hover > .mega-menu-content { display: block; 
 #primary-menu ul ul li:first-child { border-top: 0; }
 
 #primary-menu ul ul li > a {
-	font-size: 13px;
-	font-weight: 700;
-	color: #666;
+	font-size: 15px;
+	font-weight: 500;
+	color: #888;
 	padding-top: 10px;
 	padding-bottom: 10px;
 	border: 0;
 	letter-spacing: 0;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Poppins', sans-serif;
 	-webkit-transition: all .2s ease-in-out;
 	-o-transition: all .2s ease-in-out;
 	transition: all .2s ease-in-out;
@@ -1257,7 +1256,7 @@ body.stretched #header.full-header #primary-menu ul li.mega-menu .mega-menu-cont
 #primary-menu ul li .mega-menu-content.style-2 ul.mega-menu-column > li.mega-menu-title > a {
 	font-size: 13px;
 	font-weight: bold;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Poppins', sans-serif;
 	letter-spacing: 1px;
 	text-transform: uppercase !important;
 	margin-bottom: 15px;
@@ -1721,7 +1720,7 @@ body.top-search-open #top-search form {
 	color: #333;
 	font-weight: 700;
 	margin-top: 0 !important;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Poppins', sans-serif;
 	letter-spacing: 2px;
 }
 
@@ -1921,7 +1920,7 @@ body:not(.device-md):not(.device-sm):not(.device-xs) #header.transparent-header:
 #top-account .dropdown-menu { padding: 10px 0; }
 
 #top-account .dropdown-menu li a {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Poppins', sans-serif;
 	font-weight: 400;
 	text-align: left;
 	line-height: 22px;
@@ -4837,7 +4836,7 @@ body.device-touch.device-xs .portfolio-notitle .portfolio-overlay { display: non
 	line-height: 14px;
 	margin: 0 10px 15px 0;
 	color: #999;
-	font-family: 'Open Sans', serif;
+	font-family: 'Poppins', serif;
 	font-style: italic;
 }
 
@@ -4884,7 +4883,7 @@ body.device-touch.device-xs .portfolio-notitle .portfolio-overlay { display: non
 	padding: 30px 0;
 	text-align: center;
 	color: #444;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Poppins', sans-serif;
 	text-transform: uppercase;
 	letter-spacing: 1px;
 	font-size: 24px;
@@ -4907,7 +4906,7 @@ body:not(.device-touch) .entry-link {
 .entry-link span {
 	display: block;
 	margin-top: 5px;
-	font-family: 'Open Sans', serif;
+	font-family: 'Poppins', serif;
 	font-style: italic;
 	font-weight: normal;
 	text-transform: none;
@@ -4920,7 +4919,7 @@ body:not(.device-touch) .entry-link {
 
 .entry blockquote p {
 	font-weight: 400;
-	font-family: 'Open Sans', serif;
+	font-family: 'Poppins', serif;
 	font-style: italic;
 }
 
@@ -5122,7 +5121,7 @@ body:not(.device-touch) .entry-link {
 	font-weight: bold;
 	letter-spacing: 1px;
 	text-transform: uppercase;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Poppins', sans-serif;
 }
 
 .post-timeline .entry-timeline {
@@ -5261,7 +5260,7 @@ body:not(.device-touch) .entry-link {
 	display: inline-block;
 	border-bottom: 1px solid #24A35B;
 	padding: 0 2px;
-	font-family: 'Open Sans', serif;
+	font-family: 'Poppins', serif;
 	font-style: italic;
 }
 
@@ -5536,7 +5535,7 @@ body:not(.device-touch) .entry-link {
 .comment-content .comment-author span a {
 	font-size: 12px;
 	font-weight: normal;
-	font-family: 'Open Sans', serif;
+	font-family: 'Poppins', serif;
 	font-style: italic;
 	color: #AAA;
 }
@@ -5649,7 +5648,7 @@ div.alignright {
 .wp-caption {
 	text-align: center;
 	margin: 10px 20px 13px 20px;
-	font-family: 'Open Sans', Georgia, "Times New Roman", Times, serif;
+	font-family: 'Poppins', Georgia, "Times New Roman", Times, serif;
 	font-style: italic;
 }
 
@@ -6566,7 +6565,7 @@ body:not(.device-touch) .button {
 	font-size: 22px;
 	height: auto;
 	line-height: 1;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Poppins', sans-serif;
 }
 
 .button.button-desc span {
@@ -6575,7 +6574,7 @@ body:not(.device-touch) .button {
 	font-size: 14px;
 	font-weight: 400;
 	letter-spacing: 1px;
-	font-family: 'Open Sans', serif;
+	font-family: 'Poppins', serif;
 	font-style: italic;
 	text-transform: none;
 }
@@ -7415,7 +7414,7 @@ body:not(.device-touch) .button.button-full strong {
 
 .feature-box p {
 	margin: 8px 0 0 0;
-	color: #999;
+	color: #888;
 	font-size: 16px;
 }
 
@@ -7581,12 +7580,12 @@ body:not(.device-touch) .button.button-full strong {
 .feature-box.fbox-plain.fbox-small .fbox-icon { width: 28px; }
 
 .feature-box.fbox-plain.fbox-small h3 {
-	font-size: 16px;
+	font-size: 20px;
 	line-height: 26px;
 	margin-bottom: 10px;
 }
 
-.feature-box.fbox-plain.fbox-small p { margin-left: -42px; font-size: 16px; }
+.feature-box.fbox-plain.fbox-small p { margin-left: -42px; font-size: 18px; font-weight: 300; }
 
 .feature-box.fbox-plain.fbox-small .fbox-icon i { font-size: 28px; }
 
@@ -7749,7 +7748,7 @@ body:not(.device-touch) .button.button-full strong {
 
 .feature-box.fbox-center.fbox-italic p {
 	font-style: italic;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Poppins', sans-serif;
 }
 
 
@@ -8815,8 +8814,8 @@ body:not(.device-touch) .social-icon i {
 	line-height: 24px;
 	padding: 0 0 0 24px;
 	margin: 0;
-	font-size: 16px;
-	font-weight: 700;
+	font-size: 20px;
+	font-weight: 500;
 	color: #444;
 	cursor: pointer;
 }
@@ -8902,7 +8901,7 @@ body:not(.device-touch) .social-icon i {
 }
 
 .faqs .toggle .togglet,
-.faqs .toggle .toggleta { font-size: 15px; }
+.faqs .toggle .toggleta { font-size: 18px; }
 
 .faqs .toggle .togglet i {
 	top: 1px;
@@ -9165,7 +9164,7 @@ ul.tab-nav-lg li {
 ul.tab-nav-lg li a {
 	display: inline-block;
 	color: #444;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Poppins', sans-serif;
 	font-size: 13px;
 	font-weight: bold;
 	text-transform: uppercase;
@@ -9583,7 +9582,7 @@ body:not(.device-touch) .clients-grid li a {
 .testi-content p {
 	margin-bottom: 0;
 	color: #999;
-	font-family: 'Open Sans', serif;
+	font-family: 'Poppins', serif;
 	font-style: italic;
 }
 
@@ -9773,7 +9772,7 @@ body:not(.device-touch) .clients-grid li a {
 	display: block;
 	color: #24A35B;
 	font-weight: 400;
-	font-family: 'Open Sans', serif;
+	font-family: 'Poppins', serif;
 	font-style: italic;
 	font-size: 15px;
 	margin-top: 5px;
@@ -10125,7 +10124,7 @@ body:not(.device-touch) .team-overlay {
 .counter {
 	font-size: 42px;
 	font-weight: 600;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Poppins', sans-serif;
 }
 
 .counter.counter-small { font-size: 28px; }
@@ -10255,7 +10254,7 @@ body:not(.device-touch) .rounded-skill {
 
 .skills li .progress-percent .counter {
 	font-weight: 400;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Poppins', sans-serif;
 }
 
 .progress-percent:after, .progress-percent:before {
@@ -11025,7 +11024,7 @@ label {
 	display: inline-block;
 	font-size: 13px;
 	font-weight: 700;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Poppins', sans-serif;
 	text-transform: uppercase;
 	letter-spacing: 1px;
 	color: #555;
@@ -11214,7 +11213,7 @@ input[type=checkbox]:not(:checked) + label.error { display: block !important; }
 	font-weight: 700;
 	text-transform: uppercase;
 	letter-spacing: 1px;
-	color: #333;
+	color: #444;
 }
 
 .emphasis-title h1,
@@ -11403,7 +11402,7 @@ input[type=checkbox]:not(:checked) + label.error { display: block !important; }
 	display: block;
 	margin: 0 0 5px;
 	font-size: 16px;
-	font-family: 'Open Sans', serif;
+	font-family: 'Poppins', serif;
 	font-style: italic;
 	font-weight: 400;
 	color: #999;
@@ -12357,7 +12356,7 @@ body:not(.device-touch) .tagcloud a {
 .widget-filter-links li a {
 	display: block;
 	color: #444;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Poppins', sans-serif;
 	font-weight: 500;
 }
 
@@ -12413,7 +12412,7 @@ body:not(.device-touch) .tagcloud a {
 	font-size: 13px;
 	font-weight: 700;
 	letter-spacing: 2px;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Poppins', sans-serif;
 }
 
 .nav-tree li i {
@@ -12446,7 +12445,7 @@ body:not(.device-touch) .tagcloud a {
 	font-size: 12px;
 	padding: 6px 0;
 	letter-spacing: 1px;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Poppins', sans-serif;
 }
 
 .nav-tree ul ul a i.icon-angle-down { font-size: 12px; }
@@ -12477,7 +12476,7 @@ body:not(.device-touch) .tagcloud a {
 	font-weight: bold;
 	text-align: right;
 	text-transform: uppercase;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Poppins', sans-serif;
 	letter-spacing: 2px;
 }
 
@@ -12493,7 +12492,7 @@ body:not(.device-touch) .tagcloud a {
 	font-size: 56px;
 	font-weight: 400;
 	font-style: italic;
-	font-family: 'Open Sans', serif;
+	font-family: 'Poppins', serif;
 	text-transform: none;
 }
 
