--- a/css/responsive.css
+++ b/css/responsive.css
@@ -453,9 +453,9 @@
 
 	#primary-menu ul ul li > a {
 		padding: 11px 5px !important;
-		font-size: 13px;
+		font-size: 18px;
 		text-transform: none;
-		font-weight: 400;
+		font-weight: 500;
 	}
 
 	#primary-menu ul ul li:hover > a {
@@ -1543,6 +1543,10 @@
 		width: 100% !important;
 		padding-left: 40px !important;
 		padding-right: 40px !important;
+	}
+
+	#primary-menu ul li > a {
+		color: #24b35a !important;
 	}
 
 	#primary-menu-trigger { left: 20px; }
